# coalPIPP

./: .gitignore  CMakeLists.txt  README.md
analytical/steady/: __init__.py  model.py  model_frame.py
config/: config.ini
input/: __init__.py  parameters.py  plot_parameters.py  props.py
numerical/: __init__.py  cfd_test.py  wrapper.cpp
numerical/equation/: Equation.cpp  Equation.h  Steady.cpp  Steady.h  Transient.cpp  Transient.h
numerical/math/: Convective.cpp  Convective.h  Local.cpp  Local.h  Props.cpp  Props.h
optimization/demo/: demo_empirical_risk.py  demo_optimization.py  demo_vectorization.py
optimization/steady/: analytical_analytical.py  analytical_scipy.py
optimization/transient/: numerical_scipy.py
output/: .gitignore  __init__.py  optimized_sample_form.py  plot_optimized_sample.py
